# mensa-sh-gnome

./: README.md  default.nix  digital.fischers.mensash.json  flake.nix  meson.build
.github/workflows/: flatpak-release.yml
data/: digital.fischers.mensash.desktop.in  digital.fischers.mensash.gschema.xml  digital.fischers.mensash.metainfo.xml.in  digital.fischers.mensash.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  de.po  en.po  mensa-sh.pot  meson.build
src/: api.js  config.js  digital.fischers.mensash.data.gresource.xml  digital.fischers.mensash.src.gresource.xml  main.js  meson.build  preferences.js  style.css  window.js  window.ui
